votenirvan-chart/templates/apigateway-service.yml
apiVersion: v1
kind: Service
metadata:
  name: apigateway
spec:
  selector:
    app: apigateway
    type: backend
  type: ClusterIP
  ports:
  - port: 4444
    targetPort: 4444
