votenirvan-chart/templates/auth-service.yml
kind: Service
apiVersion: v1
metadata:
  name: auth
spec:
  selector:
    app: auth
  type: ClusterIP
  ports:
  - port: 4005
    targetPort: 4005
