votenirvan-chart/templates/election-service.yml
kind: Service
apiVersion: v1
metadata:
  name: election
spec:
  selector:
    app: election
  type: ClusterIP
  ports:
  - port: 4000
    targetPort: 4000
