votenirvan-chart/templates/frontend-service.yml
kind: Service
apiVersion: v1
metadata:
  name: frontend
spec:
  selector:
    app: votenirvan-frontend
    type: frontend
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30001
