votenirvan-chart/templates/postgres-service.yml
kind: Service
apiVersion: v1
metadata:
  name:  postgresdb
spec:
  selector:
    app:  postgres
  type:  ClusterIP
  ports:
   - port:  5432
     targetPort:  5432
