votenirvan-chart/templates/twilio-service.yml
kind: Service
apiVersion: v1
metadata:
  name: twilio
spec:
  selector:
    app: twilio
    type: backend
  type: ClusterIP
  ports:
  - port: 4006
    targetPort: 4006
