votenirvan-chart/templates/vote-service.yml
kind: Service
apiVersion: v1
metadata:
  name: vote
spec:
  selector:
    app: vote
    type: backend
  type: ClusterIP
  ports:
  - port: 4003
    targetPort: 4003
